--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file ageless-span-274020-06b86fad82b5.json
   - gcloud config set project ageless-span-274020
-  - gcloud config set compute/zone
+  - gcloud config set compute/zone southamerica-east1-a	
   - gcloud container clusters get-credentials multi-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t rogeriojma/react-test -f ./client/Dockerfile.dev ./client
