--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 services:
   - docker
+env:
+  global:
+    - SHA=$(git rev-parse HEAD)
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_846969313c82_key -iv $encrypted_846969313c82_iv -in ageless-span-274020-06b86fad82b5.json.enc -out ageless-span-274020-06b86fad82b5.json -d
-  - export CLOUDSDK_CORE_DISABLE_PROMPTS=1
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
@@ -15,3 +18,9 @@ before_install:
 
 script:
   - docker run -e CI=true rogeriojma/react-test npm run test
+
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
